-rozbudowa klasy Debug: jest teraz bardziej uniwersalna, i mozna wybieraz poziom istotnosci wiadomosci -dodanie katalogu na makra CMake, oraz pierwszego makra (FORCE_ADD_FLAGS)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,12 @@
 project(library)
 cmake_minimum_required(VERSION 2.8)
 
-if (CMAKE_BUILD_TYPE STREQUAL "Debug")
-  add_definitions(-DDEBUG=1)
-endif(CMAKE_BUILD_TYPE STREQUAL "Debug")
-
 add_subdirectory(htmlParser)
 add_subdirectory(qextserialport)
+
+include (cmake/ForceAddFlags.cmake)
 
 set(LIBRARY_HEADERS debug.hpp std_macros.hpp str_op.hpp)
 
 install(FILES ${LIBRARY_HEADERS} DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
+install(FILES cmake/ForceAddFlags.cmake DESTINATION ${CMAKE_INSTALL_PREFIX}/share/cmake/Modules)
