--- a/htmlParser/CMakeLists.txt
+++ b/htmlParser/CMakeLists.txt
@@ -10,6 +10,10 @@ if (CMAKE_BUILD_TYPE STREQUAL "Debug")
   add_definitions(-DYYDEBUG=1)
 endif(CMAKE_BUILD_TYPE STREQUAL "Debug")
 
+include(../cmake/ForceAddFlags.cmake)
+
+FORCE_ADD_FLAGS(CMAKE_CXX_FLAGS -Weffc++ --std=c++0x)
+
 set (CMAKE_CXX_FLAGS "-Weffc++ ${CMAKE_CXX_FLAGS}")
 
 set(HTMLPARSER_SRC 
