initial commit: - dodanie odpowiednich CMakeLists.txt - drobna rozbudowa klasy Debug

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,18 @@
 project(library)
 cmake_minimum_required(VERSION 2.8)
 
-add_subdirectory(htmlParser)
-add_subdirectory(qextserialport)
+add_subdirectory(htmlParser htmlParser)
+add_subdirectory(qextserialport qextserialport)
+add_subdirectory(router router)
 
 include (cmake/ForceAddFlags.cmake)
 
 set(LIBRARY_HEADERS debug.hpp std_macros.hpp str_op.hpp)
 
-install(FILES ${LIBRARY_HEADERS} DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
-install(FILES cmake/ForceAddFlags.cmake DESTINATION ${CMAKE_INSTALL_PREFIX}/share/cmake/Modules)
+install(FILES ${LIBRARY_HEADERS} 
+        DESTINATION ${CMAKE_INSTALL_PREFIX}/include 
+        PERMISSIONS OWNER_READ GROUP_READ WORLD_READ )
+        
+install(FILES cmake/ForceAddFlags.cmake 
+        DESTINATION ${CMAKE_INSTALL_PREFIX}/share/cmake/Modules
+        PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
