--- a/router/CMakeLists.txt
+++ b/router/CMakeLists.txt
@@ -1,1 +1,15 @@
+project(router)
 
+cmake_minimum_required( VERSION 2.6 )
+find_package ( Qt4 REQUIRED )
+
+include_directories(${QT_INCLUDES} ${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_BINARY_DIR} .)
+
+set(routerDemo_SRCS 
+    main.cpp 
+    routerdemo.cpp 
+    router.cpp
+   )
+
+add_executable ( routerDemo  ${routerDemo_SRCS})
+target_link_libraries ( routerDemo ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} )
