--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,7 @@ cmake_minimum_required(VERSION 2.8)
 add_subdirectory(htmlParser htmlParser)
 add_subdirectory(qextserialport qextserialport)
 add_subdirectory(router router)
-
-include (cmake/ForceAddFlags.cmake)
+add_subdirectory(QtExt QtExt)
 
 set(LIBRARY_HEADERS debug.hpp std_macros.hpp str_op.hpp)
 
@@ -13,6 +12,6 @@ install(FILES ${LIBRARY_HEADERS}
         DESTINATION ${CMAKE_INSTALL_PREFIX}/include 
         PERMISSIONS OWNER_READ GROUP_READ WORLD_READ )
         
-install(FILES cmake/ForceAddFlags.cmake 
-        DESTINATION ${CMAKE_INSTALL_PREFIX}/share/cmake/Modules
-        PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
+# install(FILES cmake/ForceAddFlags.cmake 
+#         DESTINATION ${CMAKE_INSTALL_PREFIX}/share/cmake/Modules
+#         PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
