--- a/htmlParser/CMakeLists.txt
+++ b/htmlParser/CMakeLists.txt
@@ -10,23 +10,23 @@ if (CMAKE_BUILD_TYPE STREQUAL "Debug")
   add_definitions(-DYYDEBUG=1)
 endif(CMAKE_BUILD_TYPE STREQUAL "Debug")
 
-set(HTMLPARSER_SRC 
-  searchlist.cpp 
-  htmltaglist.cpp 
-  htmltag.cpp 
+set(HTMLPARSER_SRC
+  searchlist.cpp
+  htmltaglist.cpp
+  htmltag.cpp
   htmlparser.cpp
 )
 
 set(HTMLPARSER_HEADERS
-  searchlist.hpp 
-  htmltaglist.hpp 
-  htmltag.hpp 
+  searchlist.hpp
+  htmltaglist.hpp
+  htmltag.hpp
   htmlparser.hpp
 )
 
-flex_target(htmlFlex html.l ${CMAKE_CURRENT_BINARY_DIR}/html.yy.cc 
+flex_target(htmlFlex html.l ${CMAKE_CURRENT_BINARY_DIR}/html.yy.cc
     COMPILE_FLAGS "-CF --header-file=${CMAKE_CURRENT_BINARY_DIR}/html.yy.hh")
-flex_target(cssFlex css.l ${CMAKE_CURRENT_BINARY_DIR}/css.yy.cc 
+flex_target(cssFlex css.l ${CMAKE_CURRENT_BINARY_DIR}/css.yy.cc
     COMPILE_FLAGS "-CF --header-file=${CMAKE_CURRENT_BINARY_DIR}/css.yy.hh")
 bison_target(htmlBison html.y ${CMAKE_CURRENT_BINARY_DIR}/html.tab.cc)
 bison_target(cssBison css.y ${CMAKE_CURRENT_BINARY_DIR}/css.tab.cc)
@@ -44,14 +44,14 @@ add_library(htmlParser SHARED
 #link htmlParser staticaly with flex
 target_link_libraries(htmlParser ${FLEX_LIBRARIES})
 
-set_target_properties(htmlParser PROPERTIES COMPILE_FLAGS "--std=c++0x"
+set_target_properties(htmlParser PROPERTIES COMPILE_FLAGS "--std=c++0x -fvisibility=hidden -fvisibility-inlines-hidden"
                                             COMPILE_FLAGS_DEBUG "-Weffc++")
-                                 
+
 
 #install files
-if (WIN32)  # for windows (dll = runtime)
+if(WIN32)  # for windows (dll = runtime)
   install (TARGETS htmlParser RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX})
-else (WIN32)
+else(WIN32)
   install (TARGETS htmlParser LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib${LIB_SUFFIX})
 endif(WIN32)
 
