--- a/htmlParser/CMakeLists.txt
+++ b/htmlParser/CMakeLists.txt
@@ -44,7 +44,7 @@ add_library(htmlParser SHARED
 #link htmlParser staticaly with flex
 target_link_libraries(htmlParser ${FLEX_LIBRARIES})
 
-set_target_properties(htmlParser PROPERTIES COMPILE_FLAGS "--std=c++0x -fvisibility=hidden -fvisibility-inlines-hidden"
+set_target_properties(htmlParser PROPERTIES COMPILE_FLAGS "--std=c++0x ${LIB_CXXFLAGS}"
                                             COMPILE_FLAGS_DEBUG "-Weffc++")
 
 
