copy_ptr added to new sublib "utils"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ add_subdirectory(htmlParser htmlParser)
 add_subdirectory(qextserialport qextserialport)
 add_subdirectory(router router)
 add_subdirectory(QtExt QtExt)
+add_subdirectory(utils utils)
 
 set(LIBRARY_HEADERS debug.hpp std_macros.hpp str_op.hpp)
 
