--- a/router/CMakeLists.txt
+++ b/router/CMakeLists.txt
@@ -1,7 +1,7 @@
 project(router)
 
 cmake_minimum_required( VERSION 2.6 )
-find_package ( Qt4 REQUIRED )
+find_package( Qt4 REQUIRED )
 
 include_directories(${QT_INCLUDES} ${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_BINARY_DIR} .)
 
@@ -11,5 +11,8 @@ set(routerDemo_SRCS
     router.cpp
    )
 
-add_executable ( routerDemo  ${routerDemo_SRCS})
-target_link_libraries ( routerDemo ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} )
+add_executable( routerDemo  ${routerDemo_SRCS})
+target_link_libraries( routerDemo ${QT_QTCORE_LIBRARY} ${QT_QTGUI_LIBRARY} )
+
+set_target_properties(routerDemo PROPERTIES COMPILE_FLAGS "--std=c++11"
+                                            COMPILE_FLAGS_DEBUG "-Weffc++")
