--- a/math/CMakeLists.txt
+++ b/math/CMakeLists.txt
@@ -28,3 +28,13 @@ else(WIN32)
 endif(WIN32)
 
 install (FILES ${MATH_HEADERS} DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
+
+
+############################### tests ###############################
+
+enable_testing()
+
+add_executable(TestTypes tests/types_test.cpp)
+target_link_libraries(TestTypes math)
+
+add_test(test_types ${CMAKE_CURRENT_BINARY_DIR}/TestTypes TestingTypes)
