utils: register_library used

--- a/utils/CMakeLists.txt
+++ b/utils/CMakeLists.txt
@@ -1,4 +1,5 @@
-set(LIB_NAME Utils)
+
+set(LIB_NAME utils)
 
 project( ${LIB_NAME} )
 cmake_minimum_required(VERSION 2.8)
@@ -8,4 +9,4 @@ set(LIB_HEADERS
   copy_ptr.hpp
 )
 
-install (FILES ${LIB_HEADERS} DESTINATION ${CMAKE_INSTALL_PREFIX}/include)
+register_library(${LIB_NAME} HEADERS ${LIB_HEADERS})
