autogeneration of cmake variables for libraries continued - libraries are listed and then conencted together into one file
libraries.cmake in script directory is being created

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,6 +80,8 @@ set(LIBRARY_HEADERS debug.hpp std_macros.hpp str_op.hpp)
 
 register_library(common HEADERS ${LIBRARY_HEADERS})
 
+generate_variables_file()
+
 # install(FILES cmake/ForceAddFlags.cmake
 #         DESTINATION ${CMAKE_INSTALL_PREFIX}/share/cmake/Modules
 #         PERMISSIONS OWNER_READ GROUP_READ WORLD_READ)
