--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -1,7 +1,6 @@
 
 #some functions for generation useful stuff
 
-
 #generate cmake variables for library
 #Function generates file with library specific cmake variables
 #A variable ${name}_LIBRARIES will be created.
@@ -12,18 +11,24 @@ function(generate_variables name)
     string(TOUPPER ${name} UP_NAME)
 
     #generate file with cmake variables
-    file(WRITE ${CMAKE_SOURCE_DIR}/scripts/tmp/${name} "set(${UP_NAME}_LIBRARIES ${ARGN})")
-
-    set(GENERATED_FILES ${GENERATED_FILES} tmp/${name} PARENT_SCOPE)
+    add_custom_command(OUTPUT ${CMAKE_SOURCE_DIR}/scripts/tmp/${name}
+                       COMMAND echo ARGS "set(${UP_NAME}_LIBRARIES ${ARGN})" > ${CMAKE_SOURCE_DIR}/scripts/tmp/${name})
 
 endfunction(generate_variables)
 
 
 #gather and connect all generated files with cmake variables
-function(create_libraries_file)
+function(generate_variables_file)
 
-    add_custom_command(OUTPUT libraries.cmake
-                       COMMAND cat ARGS ${GENERATED_FILES} > libraries.cmake
-                       DEPENDS ${GENERATED_FILES})
+    file(GLOB_RECURSE files ${CMAKE_SOURCE_DIR}/scripts/tmp/*)
+    foreach(file ${files})
+        set(generated_files ${generated_files} ${file})
+    endforeach(file ${files})
 
-endfunction(create_libraries_file)
+    message ( "Variables generated for libraries: ${generated_files}" )
+
+    add_custom_command(OUTPUT ${CMAKE_SOURCE_DIR}/scripts/libraries.cmake ALL
+                      COMMAND cat ${generated_files} > ${CMAKE_SOURCE_DIR}/scripts/libraries.cmake
+                      DEPENDS ${generated_files})
+
+endfunction(generate_variables_file)
