math: tests enabled

--- a/math/CMakeLists.txt
+++ b/math/CMakeLists.txt
@@ -18,11 +18,10 @@ register_library(math SOURCES ${MATH_SRC} HEADERS ${MATH_HEADERS})
 
 ############################### tests ###############################
 
-#include(${CMAKE_SOURCE_DIR}/libraries.cmake)
+include(${LIBRARIES_CMAKE})
 
-#enable_testing()
+enable_testing()
 
-#add_executable(TestTypes tests/types_test.cpp)
-#target_link_libraries(TestTypes math ${UTILS_LIBRARIES})
-
-#add_test(test_types ${CMAKE_CURRENT_BINARY_DIR}/TestTypes TestingTypes)
+add_executable(TestTypes tests/types_test.cpp)
+target_link_libraries(TestTypes ${MATH_LIBRARIES} ${UTILS_LIBRARIES})
+add_test(test_types ${CMAKE_CURRENT_BINARY_DIR}/TestTypes TestingTypes)
