router: cmake refactor

--- a/src/router/CMakeLists.txt
+++ b/src/router/CMakeLists.txt
@@ -1,5 +1,7 @@
 
-project(router)
+set( LIB_NAME router )
+
+project( ${LIB_NAME} )
 
 cmake_minimum_required( VERSION 2.6 )
 
@@ -15,7 +17,7 @@ set(router_HPP
     A_star/std_types.hpp
 )
 
-register_library(router HEADERS ${router_HPP})
+register_library(${LIB_NAME} HEADERS ${router_HPP})
 
 #visualizer
 include_directories(${QT_INCLUDES} ${CMAKE_BINARY_DIR} ${CMAKE_CURRENT_BINARY_DIR} .)
